# steam-monitor

./: .dockerignore  .env.example  .gitignore  .samignore  Makefile  README.md  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
lambda/: handler.py
pagemonitor/: __init__.py  cli.py  discord.py  env.py  monitor.py  steamframe.py
scripts/: check_page.py  deploy_lambda.sh  ping_role.py  ping_user.py  simulate_change.py
tests/: test_discord.py  test_env.py  test_monitor.py  test_steamframe.py
