[project]
name = "pagemonitor"
version = "0.1.0"
description = "Fetch a web page and detect changes against a local snapshot"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
check-page = "pagemonitor.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagemonitor*"]
